--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,17 +2,12 @@
   "name": "faster-babel-types",
   "type": "module",
   "version": "1.1.1",
-  "files": [
-    "dist",
-    "src"
-  ],
+  "files": ["dist", "src"],
   "engines": {
     "node": ">=10"
   },
   "license": "MIT",
-  "keywords": [
-    "pridepack"
-  ],
+  "keywords": ["pridepack"],
   "devDependencies": {
     "@types/node": "^20.14.10",
     "@vitest/ui": "^2.0.2",
@@ -34,11 +29,10 @@
     "start": "pridepack start",
     "dev": "pridepack dev",
     "test": "vitest",
-    "test:ui": "vitest --ui",
-    "prune": "ts-prune"
+    "test:ui": "vitest --ui"
   },
   "private": false,
-  "description": "Stringify JS values",
+  "description": "Faster `@babel/types`",
   "repository": {
     "url": "https://github.com/lxsmnsyc/faster-babel-types.git",
     "type": "git"
