--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,18 +1,13 @@
 {
   "name": "faster-babel-types",
   "type": "module",
-  "version": "1.1.1",
-  "files": [
-    "dist",
-    "src"
-  ],
+  "version": "0.0.0",
+  "files": ["dist", "src"],
   "engines": {
     "node": ">=10"
   },
   "license": "MIT",
-  "keywords": [
-    "pridepack"
-  ],
+  "keywords": ["pridepack"],
   "devDependencies": {
     "@types/node": "^20.14.10",
     "@vitest/ui": "^2.0.2",
