--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,21 +1,26 @@
 {
   "name": "faster-babel-types",
   "type": "module",
-  "version": "0.0.0",
-  "files": ["dist", "src"],
+  "version": "0.1.0",
+  "files": [
+    "dist",
+    "src"
+  ],
   "engines": {
     "node": ">=10"
   },
   "license": "MIT",
-  "keywords": ["pridepack"],
+  "keywords": [
+    "pridepack"
+  ],
   "devDependencies": {
+    "@babel/types": "^7.25.2",
     "@types/node": "^20.14.10",
     "@vitest/ui": "^2.0.2",
     "pridepack": "2.6.1",
     "tslib": "^2.6.3",
     "typescript": "^5.5.3",
-    "vitest": "^2.0.2",
-    "@babel/types": "^7.25.2"
+    "vitest": "^2.0.2"
   },
   "peerDependencies": {
     "@babel/types": "^7"
